Ajuste funcionalidades
# Conflicts:
#	src/main/java/com/ufcg/psoft/commerce/dto/compra/CompraResponseDTO.java
#	src/main/java/com/ufcg/psoft/commerce/model/Operacao.java
#	src/main/java/com/ufcg/psoft/commerce/repository/CompraRepository.java
#	src/main/java/com/ufcg/psoft/commerce/service/compra/CompraServiceImpl.java